--- a/hajos_kviz/HajósTeszt.csproj
+++ b/hajos_kviz/HajósTeszt.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="31.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="hajozasi_szabalyzat_kerdessor_BOM.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
